[project]
name = "matrixqtt"
version = "0.1.0"
description = "A real-time MQTT message visualizer inspired by the Matrix digital rain effect. Displays incoming MQTT messages with customizable colors, sound effects, and dynamic visual effects."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "paho-mqtt>=2.1.0",
    "pygame>=2.6.1",
]
